# BioRec-One

./: CITATION.cff  LICENSE  LICENSE.md  README.md  README_EN.md  README_ZH.md
examples/: ECG026_2026-03-09_00-18-15.csv  ECG027_2026-03-09_00-19-17.bdf  ECG041_2026-03-22_09-38-29.bdf  ECG080_2026-04-12_00-17-14.csv
firmware/fpga/: README.md
firmware/fpga/project_gowin_v1.9.9/: fpga_ecg.gprj
firmware/fpga/project_gowin_v1.9.9/impl/: fpga_ecg_process_config.json
firmware/fpga/project_gowin_v1.9.9/impl/gwsynthesis/: fpga_ecg.prj  fpga_ecg.vg  fpga_ecg_syn.rpt.html  fpga_ecg_syn_resource.html  fpga_ecg_syn_rsc.xml
firmware/fpga/project_gowin_v1.9.9/impl/pnr/: cmd.do  fpga_ecg.binx  fpga_ecg.db  fpga_ecg.fs  fpga_ecg.pin.html  fpga_ecg.power.html  fpga_ecg.rpt.html  fpga_ecg.rpt.txt  fpga_ecg.timing_paths  fpga_ecg.tr.html  fpga_ecg_tr_cata.html  fpga_ecg_tr_content.html
firmware/fpga/project_gowin_v1.9.9/impl/temp/: rtl_parser.result  rtl_parser_arg.json
firmware/fpga/project_gowin_v1.9.9/src/: fpga_ecg.cst  fpga_ecg.rao  fpga_ecg.sdc  top.sv
firmware/fpga/project_gowin_v1.9.9/src/ad_da/: ads1259.v  ads1259_tb.v  dac8830.v
firmware/fpga/project_gowin_v1.9.9/src/fifo_sc/: fifo_16.ipc  fifo_16.v  fifo_16.vo  fifo_24.ipc  fifo_24.v  fifo_24.vo  fifo_24_tmp.v
firmware/fpga/project_gowin_v1.9.9/src/filter_process/: filter_process.sv
firmware/fpga/project_gowin_v1.9.9/src/filter_process/fir_lpf/: basic_fir_filter.ipc  basic_fir_filter.v  basic_fir_filter.vo  fir_lpf.sv
firmware/fpga/project_gowin_v1.9.9/src/filter_process/fir_lpf/coeffi_data/: lpf_100_coeffi.txt  lpf_200_coeffi.txt  (+1 more)
firmware/fpga/project_gowin_v1.9.9/src/filter_process/iir_hpf/: iir_hpf.v
firmware/fpga/project_gowin_v1.9.9/src/filter_process/iir_notch/: iir_notch.v  iir_tb.v
firmware/fpga/project_gowin_v1.9.9/src/filter_process/reset_iir_on_ring/: iir_on_ring_tb.v  reset_iir_on_ring.v
firmware/fpga/project_gowin_v1.9.9/src/led/: led.v
firmware/fpga/project_gowin_v1.9.9/src/pan_tompkins/: pan_tompkins.v  pan_tompkins_utils.v
firmware/fpga/project_gowin_v1.9.9/src/pan_tompkins/modelsim/: ecg_12bit_200Hz_240bpm.csv  pt.cr.mti  pt.mpf  transcript  vsim.wlf  wlftj3238t  wlftksmmh8
firmware/fpga/project_gowin_v1.9.9/src/pan_tompkins/testbench/: iir_tb.v  median_9_tb.v  tb_pan_tompkins.v
firmware/fpga/project_gowin_v1.9.9/src/spi/bus_control/: bus_control.v
firmware/fpga/project_gowin_v1.9.9/src/spi/spi_mode0_slave/: spi_slave.v
firmware/mcu/flash_bin/: README.md
firmware/mcu/flash_bin/flash_download_tool/configure/esp32s3/: spi_download.conf
firmware/mcu/flash_bin/flash_download_tool/logs/: 98A316C1B958.txt
firmware/mcu/project_esp_idf_v5.5.0/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/mcu/project_esp_idf_v5.5.0/components/esp_driver_sdmmc/src/: sdmmc_host.c
firmware/mcu/project_esp_idf_v5.5.0/components/esp_lcd/spi/: esp_lcd_panel_io_spi.c
firmware/mcu/project_esp_idf_v5.5.0/components/esp_lvgl_port/: CMakeLists.txt
firmware/mcu/project_esp_idf_v5.5.0/components/esp_lvgl_port/src/lvgl8/: esp_lvgl_port.c
firmware/mcu/project_esp_idf_v5.5.0/components/lvgl/: CMakeLists.txt
firmware/mcu/project_esp_idf_v5.5.0/components/lvgl/src/extra/widgets/chart/: lv_chart.c  lv_chart.h
firmware/mcu/project_esp_idf_v5.5.0/components/lvgl/src/misc/: lv_color.c
firmware/mcu/project_esp_idf_v5.5.0/components/lvgl_page_manager/src/: anima.c  pm.c  pm.h
firmware/mcu/project_esp_idf_v5.5.0/components/web_file_server/: CMakeLists.txt  app_file_server.c  app_file_server.h
firmware/mcu/project_esp_idf_v5.5.0/components/web_file_server/assets/: file_list_1.html  file_list_2.html  styles.css  upload.html
firmware/mcu/project_esp_idf_v5.5.0/components/wifi_provisioning/: dns_server.cc  wifi_configuration_ap.cc  wifi_station.cc
firmware/mcu/project_esp_idf_v5.5.0/components/wifi_provisioning/include/: dns_server.h
firmware/mcu/project_esp_idf_v5.5.0/main/: CMakeLists.txt  main.c
firmware/mcu/project_esp_idf_v5.5.0/main/beep/: beep.c  beep.h
firmware/mcu/project_esp_idf_v5.5.0/main/console/: cmd_system.c  cmd_system.h  cmd_system_common.c  console_app.c  console_app.h
firmware/mcu/project_esp_idf_v5.5.0/main/data_logger/: adc_collection.c  data_logger.c  data_logger.h
firmware/mcu/project_esp_idf_v5.5.0/main/data_logger/formatter/: bdf_formatter.c  csv_formatter.c  data_formatter.h
firmware/mcu/project_esp_idf_v5.5.0/main/ecg_process/: ecg_process.c  ecg_process.h
firmware/mcu/project_esp_idf_v5.5.0/main/mcu_fpga_comm/: crc.h  mcu_fpga_comm.c  mcu_fpga_comm.h  协议结构.vsdx  寄存器表.xlsx
firmware/mcu/project_esp_idf_v5.5.0/main/nvs/: nvs_app.c  nvs_app.h
firmware/mcu/project_esp_idf_v5.5.0/main/sntp/: rx8025t.c  rx8025t.h  sntp_app.c  sntp_app.h
firmware/mcu/project_esp_idf_v5.5.0/main/ui/: squareline_project.7z
firmware/mcu/project_esp_idf_v5.5.0/main/ui/ui_assets/: ui_font_agencyb16.h  ui_font_agencyb17.h  ui_font_chinese.h  ui_font_sharetech18.h  ui_font_sharetech52.h  ui_img_author_avatar_png.h  ui_img_icon_countdown_png.h  ui_img_icon_down_png.h  ui_img_icon_heart_png.h  ui_img_icon_overload_png.h  ui_img_icon_pausing_png.h  ui_img_icon_recording_png.h  ui_img_icon_rectangle2_png.h  ui_img_icon_rectangle_png.h  ui_img_icon_saving_png.h  ui_img_icon_up_png.h  ui_img_icon_wifi_png.h
firmware/mcu/project_esp_idf_v5.5.0/main/ui/ui_hal/: ui_hal.c  ui_hal.h
firmware/mcu/project_esp_idf_v5.5.0/main/ui/ui_pages/about_page/: about_page.c  about_page.h
firmware/mcu/project_esp_idf_v5.5.0/main/ui/ui_pages/main_page/: main_page.c  main_page.h
firmware/mcu/project_esp_idf_v5.5.0/main/ui/ui_pages/settings1_page/: settings1_page.c  settings1_page.h
firmware/mcu/project_esp_idf_v5.5.0/main/ui/ui_pages/settings2_page/: settings2_page.c  settings2_page.h
firmware/mcu/project_esp_idf_v5.5.0/main/ui/ui_pages/settings3_page/: settings3_page.c  settings3_page.h
firmware/mcu/project_esp_idf_v5.5.0/main/wifi/: wifi_app.cc  wifi_app.h
hardware/afe/: afe_proj.epro2
hardware/mainboard/: mainboard_proj.epro2
hardware/power-iso/: power-iso_proj.epro2
(+25 files in other folders)
