idf_component_register(SRCS "main.c"
                            "mcu_fpga_comm/mcu_fpga_comm.c"
                            "ecg_process/ecg_process.c"
                            "data_logger/data_logger.c"
                            "data_logger/formatter/csv_formatter.c"
                            "data_logger/formatter/bdf_formatter.c"
                            "data_logger/adc_collection.c"
                            "wifi/wifi_app.cc"
                            "sntp/sntp_app.c"
                            "sntp/rx8025t.c"
                            "beep/beep.c"
                            "nvs/nvs_app.c"
                            "console/cmd_system_common.c"
                            "console/cmd_system.c"
                            "console/console_app.c"
                            "ui/ui_hal/ui_hal.c"
                            "ui/ui_pages/main_page/main_page.c"
                            "ui/ui_pages/settings1_page/settings1_page.c"
                            "ui/ui_pages/settings2_page/settings2_page.c"
                            "ui/ui_pages/settings3_page/settings3_page.c"
                            "ui/ui_pages/about_page/about_page.c"
                    INCLUDE_DIRS "."
                            "mcu_fpga_comm"
                            "ecg_process"
                            "data_logger"
                            "data_logger/formatter"
                            "wifi"
                            "sntp"
                            "beep"       
                            "nvs"
                            "console"
                            "ui/ui_hal"
                            "ui/ui_assets"
                            "ui/ui_pages/main_page"
                            "ui/ui_pages/settings1_page"
                            "ui/ui_pages/settings2_page"
                            "ui/ui_pages/settings3_page"
                            "ui/ui_pages/about_page")
                            